--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -26,7 +26,7 @@ $text-shadow: -2px 2px 4px rgba(0, 0, 0, 0.25);
 $header-height: 3.75rem;
 $row-height: 13.6em;
 $footer-height: 45rem;
-$footer-height-larger-than-tablet: 14rem;
+$footer-height-larger-than-mobile: 14rem;
 $header-z-index: 2;
 $footer-z-index: 3;
 $grid-spacing-large: 1em;
